--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 ul, ol {
     list-style: none;
 }
@@ -21,7 +26,7 @@ ul, ol {
     padding-top: 22px;
 }
     
-.headerLeft {
+.header_left {
     display: flex;
     align-items: center;
     margin-left: 120px;
@@ -29,11 +34,11 @@ ul, ol {
     column-gap: 15px;
 }
 
-.headerList {
+.header_list {
     margin-right: 250px;
 }
 
-.list-links {
+.list_links {
     display: flex;
     justify-content:space-evenly;
     align-items: center;
@@ -56,7 +61,123 @@ ul, ol {
     width: 17px;
     height: 22px;
 }
+
+/* START : Stylisation de la banniere */
+
+.banniere {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eb9118;
+    column-gap: 40px;
+}
     
+.banniere_image {
+    width: 30px;
+    color: #fdf3ed;
+}
+
+.banniere_title {
+    font-size: 16px;
+    font-weight: 500px;
+    color: #fdf3ed;
+}
+
+/* START : Stylisation de la cover */
+
+.cover {
+    
+}
+    
+.cover_image {
+    position: relative;
+    width:100%;
+    height: 550px;
+}
+
+.cover_container-texts {
+    position: absolute;
+    top:25%;
+    right: 54%;
+    color: #ffffff;
+}
+
+.cover_title {
+    font-size: 58px;
+    font-family: Amatic SC, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: left;
+    padding-left: 15%;
+    margin-top: 30px;
+    color: #fff;
+}
+    
+.cover_introduction {
+    font-size: 20px;
+    font-family: Raleway, sans-serif;
+    padding-left: 15%;
+    margin-top: 10px;
+    line-height: 1.5;
+}
+
+.button {
+    display: inline-block;
+    color: red;
+    margin-top: 50px;
+    padding-left: 15%;
+}
+ 
+    
+    
+
+    
+    
+/*.cover_nav {
+    position: absolute;
+    top:50%;
+    right: 60%;
+}
+
+.cover_container-nav {
+    position: relative;
+    padding-left: 270px;
+    margin-top: 140px;
+}    
+
+.button {
+    padding: 15px 45px;
+    border-radius: 50px;
+    font-weight: 600;
+    margin-left: 10px;
+
+}
+    
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+    
+/* 800px = tablette portrait 
+@media screen and (max-width:800px) {
+    .cover_flux {
+
+    }
+    
+}
+ */   
 
 
     
